--- a/src/pages/tab/tab.html
+++ b/src/pages/tab/tab.html
@@ -4,7 +4,7 @@
   <div ng-include="'build/pages/myInfo/myInfo.html'" ng-if="tabs[1].isActive" ng-controller="myInfoCtrl"></div>
   <div ng-include="'build/pages/myClass/myClass.html'" ng-if="tabs[2].isActive" ng-controller="myClassCtrl"></div>
   <div ng-include="'build/pages/school/school.html'" ng-if="tabs[3].isActive" ng-controller="schoolCtrl"></div>
-  <!--<div ng-include="'build/pages/setting/setting.html'" ng-if="tabs[4].isActive" ng-controller="settingCtrl"></div>-->
+  <div ng-include="'build/pages/setting/setting.html'" ng-if="tabs[4].isActive" ng-controller="settingCtrl"></div>
   <div class="bar bar-footer" style="z-index: 11;padding: 0">
     <div class="line"></div>
     <div class="tabs tabs-icon-top">
