--- a/src/pages/setting/setting.html
+++ b/src/pages/setting/setting.html
@@ -1,12 +1,47 @@
-<ion-view view-title="首页" class="indexPage" >
-  <ion-header-bar align-title="center" class="bar-stable">
-    <h1 class="title">
-      <span>设置</span>
-    </h1>
-    <div class="buttons">
+<ion-view view-title="首页" class="myInfo indexPage agentInfo setting">
+  <ion-header-bar class="head-bg">
+    <div class="title titleStyle">
+      注册用户情况统计
     </div>
+    <i class="ion-ios-email-outline right-image emailStyle" ng-click="goMessage()"></i>
   </ion-header-bar>
-  <ion-content>
-
+  <ion-content class="content-style" delegate-handle="mainScroll">
+    <ion-list>
+      <ion-item class="item item-icon-right">
+        <div class="row row-wrap">
+          <div class="col col-25">
+            <img src="build/assets/img/login/product_logo.png">
+          </div>
+          <div class="col col-75">
+            <div class="row">姓名 职务</div>
+            <div class="row">直属公司</div>
+          </div>
+        </div>
+        <!--<i class="icon ion-ios-arrow-right"></i>-->
+      </ion-item>
+      <ion-item>
+        我的任务
+        <div class="row row-wrap" ng-click="userApplication()">
+          <div class="col col-25" >
+            <span class="userStyle"><p>用户申请</p>
+              <!--<span class="hongDian">3</span>-->
+              <span class="badge badge-assertive hongDian">0</span>
+            </span>
+          </div>
+        </div>
+      </ion-item>
+      <ion-item class="text-center item item-icon-right">
+        我的资源（即将上线，敬请期待）<i class="icon ion-ios-arrow-right"></i>
+      </ion-item>
+      <ion-item class="text-center  item item-icon-right" ng-click="goChangePassword()">
+        修改密码<i class="icon ion-ios-arrow-right"></i>
+      </ion-item>
+      <ion-item class="text-center item item-icon-right" ng-click="versionDetection()">
+        版本检测(1.2.3)
+      </ion-item>
+      <ion-item class="text-center item item-icon-right" ng-click="exitAccount()">
+        退出登录
+      </ion-item>
+    </ion-list>
   </ion-content>
 </ion-view>
